Bug 411028 - Can't untile wine games (restore to fullscreen)
Summary: Can't untile wine games (restore to fullscreen)
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: 5.15.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D23604
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-17 23:54 UTC by Teddy
Modified: 2019-09-11 18:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:
vlad.zahorodnii: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Teddy 2019-08-17 23:54:31 UTC
SUMMARY
Can't untile wine games which have been tiled with Meta + any arrow


STEPS TO REPRODUCE
1. Tile a wine game with Meta+Right
2. Try to untile it, with Meta+PgUp for example

OBSERVED RESULT
Does not work


EXPECTED RESULT
Restore window to fullscreen


SOFTWARE/OS VERSIONS
Operating System: Kubuntu 19.04
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Kernel Version: 5.0.0-25-generic
OS Type: 64-bit


ADDITIONAL INFORMATION
Other users have already commented on the issue:
https://forum.kde.org/viewtopic.php?f=67&t=160557

Maybe the bug does not belong to frameworks-plasma, just reassign if required.
Comment 1 Teddy 2019-08-18 00:06:41 UTC
KDE docs calls it Pan instead of Tile
Comment 2 Vlad Zahorodnii 2019-08-20 18:37:15 UTC
Hmm, I wonder whether you should be able to quick tile fullscreen maximized clients at all.

This looks like a bug on our side.
Comment 3 Teddy 2019-08-20 19:24:18 UTC
In case it helps, I've tried with gnome, and it doesn't allow it...
Comment 4 Vlad Zahorodnii 2019-09-05 07:37:52 UTC
Git commit 2963c9ca56a03164b394d8e384c2341d3464ae5c by Vlad Zagorodniy.
Committed on 05/09/2019 at 07:37.
Pushed by vladz into branch 'master'.

Quick tile only resizeable clients

Summary:
Maximized clients weren't considered as resizeable when quick tiling was
added. Therefore, a special case was added in Client::setQuickTileMode().
However, that special case didn't take into account that a fullscreen
client can be also maximized. Clearly, we don't want users quick tile
fullscreen clients.
FIXED-IN: 5.17.0

Test Plan: No longer able to quick tile maximized fullscreen window of Konsole.

Reviewers: #kwin

Subscribers: romangg, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D23604

M  +3    -2    geometry.cpp

https://commits.kde.org/kwin/2963c9ca56a03164b394d8e384c2341d3464ae5c
Comment 5 Teddy 2019-09-11 18:21:25 UTC
thank you very much!
Comment 6 Vlad Zahorodnii 2019-09-11 18:22:53 UTC
yw